Created Driver service/controller and implemented Team getAll endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+# Hibernate
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = azerty123
-spring.jpa.hibernate.ddl-auto = none
 spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
 
+# Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/master.xml
 logging.level.liquibase = INFO
