--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Hibernate
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = postgres
-spring.datasource.password = azerty123
-spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=bet
+spring.datasource.username=postgres
+spring.datasource.password=azerty123
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 # Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/master.xml
-logging.level.liquibase = INFO
+spring.liquibase.liquibase-schema=public
+logging.level.liquibase=INFO
